--- a/SoulfulArt_Platform_Project/Views/BugTracker.html
+++ b/SoulfulArt_Platform_Project/Views/BugTracker.html
@@ -38,7 +38,7 @@
                         <li><a href="http://127.0.0.1:8000/">Home</a></li>
                         <li><a href="/User_Platform/UserPage">Your Page!</a></li>
                         <li><a href="/SignOut">Sign Out</a></li>
-                        <li><a href="/User_Platform/UserPage">Profile</a></li>
+                        <li><a href="/User_Platform/Profile">Profile</a></li>
                      </ul>
                   </div>
                </li>
@@ -193,18 +193,22 @@
                name="show_edit_form"
                type="submit"
                ></li>
+
             <li><input
             class="button"
             value="Filter Bugs"
             name="filter_bug_form"
             type="submit"
             ></li>
-            <li><input
-               value="Create New Bug"
-               class="button"
-               name="create_bug_form"
-               type="submit"
-               ></li>
+
+            <li>
+            <input
+            value="Create New Bug"
+            class="button"
+            name="create_bug_form"
+            type="submit">
+            </li>
+
             <li><input
                value="Delete"
                name="del_bug"
