--- a/SoulfulArt_Platform_Project/Views/CreateDep.html
+++ b/SoulfulArt_Platform_Project/Views/CreateDep.html
@@ -34,10 +34,9 @@
                   <div id="menu">
                      <ul>
                         <li><a href="http://127.0.0.1:8000/">Home</a></li>
-                        <li><a href="../Shared/generic.html">Generic</a></li>
-                        <li><a href="elements.html">Elements</a></li>
-                        <li><a href="#">Sign Up</a></li>
-                        <li><a href="#">Log In</a></li>
+                        <li><a href="/User_Platform/UserPage">Your Page!</a></li>
+                        <li><a href="/User_Platform/Profile">Profile</a></li>
+                        <li><a href="/SignOut">Sign Out</a></li>
                      </ul>
                   </div>
                </li>
@@ -68,6 +67,7 @@
                            name="dep_per_page"
                            id="dep_per_page"
                            onchange="form.submit()">
+                           <option value={{dep_per_page}} hidden>{{dep_per_page}}</option>
                            <option value="5">5</option>
                            <option value="10">10</option>
                            <option value="15">15</option>
